Adding CSS for main part

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Interactive Rating Component</title>
 </head>
 <body>
-	<div class="card" style="width: 18rem;">
+	<div class="card">
 		<div class="card-body">
 			<div class="star-container">
 				<i class="fa-solid fa-star"></i>
@@ -23,7 +23,7 @@
 				<button class="rating">4</button>
 				<button class="rating">5</button>
 		  </div>
-		  <button type="button" class="btn btn-warning">Submit</button>
+		  <button type="button" class="btn">Submit</button>
 		</div>
 	</div>
 	<script src="script.js"></script>
