--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Interactive Rating Component</title>
 </head>
 <body>
-	<div class="card">
+	<div class="card hidden">
 		<div class="card-body">
 			<div class="star-container">
 				<i class="fa-solid fa-star"></i>
@@ -24,6 +24,19 @@
 				<button class="rating">5</button>
 		  </div>
 		  <button type="button" class="btn">Submit</button>
+		</div>
+	</div>
+  <div class="card card-2">
+		<div class="card-body">
+			<div class="image-container">
+        <img src="images/file.png" alt="Submit image">
+			</div>
+      <div class="score">
+        <p>You selected 4 out of 5</p>
+      </div>
+			<h5 class="card-title">Thank you!</h5>
+			<p class="card-text">We appreciate you taking the time to give a rating.</p>
+      <p class="card-text">If you ever need more support, don't hesitate to get in touch!</p>
 		</div>
 	</div>
 	<script src="script.js"></script>
