Adding JS functionality for user rating and submitting score

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Interactive Rating Component</title>
 </head>
 <body>
-	<div class="card hidden">
+	<div class="card card-1">
 		<div class="card-body">
 			<div class="star-container">
 				<i class="fa-solid fa-star"></i>
@@ -26,13 +26,13 @@
 		  <button type="button" class="btn">Submit</button>
 		</div>
 	</div>
-  <div class="card card-2">
+  <div class="card card-2 hidden">
 		<div class="card-body">
 			<div class="image-container">
         <img src="images/file.png" alt="Submit image">
 			</div>
       <div class="score">
-        <p>You selected 4 out of 5</p>
+        <p>You selected <span>0</span> out of 5</p>
       </div>
 			<h5 class="card-title">Thank you!</h5>
 			<p class="card-text">We appreciate you taking the time to give a rating.</p>
